force-app/main/default/objects/Clock__c/Clock__c.object-meta.xml
<CustomObject>
    <label>Clock</label>
    <nameField>
        <displayFormat>clk-{0}</displayFormat>
        <label>Clock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>