force-app/main/default/objects/Clock__c/fields/show_24_Hour_Clock__c.field-meta.xml
<CustomField>
    <fullName>show_24_Hour_Clock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>show 24 Hour Clock</label>
    <type>Checkbox</type>
</CustomField>