force-app/main/default/objects/Clock__c/fields/Time_Zone_Label__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Label__c</fullName>
    <label>Time Zone Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>